--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <title>Entrega 4 CH 4-12</title>
 </head>
 <body>
-    <h1> HOLA MUNDO</h1>
     <h2><a href="http://localhost:8080/api/productos/listar">Ver productos</a></h2>
+
+    <h1> Ingrese productos:</h1>
+    <form action="http://localhost:8080/api/productos/guardar" method="POST">
+        Título: <input type="text" name="title">
+        Precio: <input type="text" name="prize">
+        Imagen: <input type="text" name="image">
+        <button type="submit">Enviar</button>
+    </form>
 </body>
 </html>
